--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li class="address__item">
                 <a class="link" href="mailto:info@devstudio.com"> 
                 
-                    <svg class="address__link--icon" width="16px" height="12px">
+                    <svg class="address__icon" width="16px" height="12px">
                         <use href="./images/sprite.svg#icon-envelope"></use>
                     </svg>info@devstudio.com
         
@@ -37,7 +37,7 @@
                 </li>
             <li class="address__item">
                 <a class="link" href="tel:+380961111111">
-                <svg class="address__link--icon" width="20px" height="16px" >
+                <svg class="address__icon" width="20px" height="16px" >
                     <use href="./images/sprite.svg#icon-smartphone"></use>
                 </svg>+38 096 111 11 11
             </a> 
