--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
                 <li class="address__item">
                     <a class="link" href="mailto:info@devstudio.com">
     
-                        <svg class="address__link--icon" width="16px" height="12px">
+                        <svg class="address__icon" width="16px" height="12px">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>info@devstudio.com
     
@@ -36,7 +36,7 @@
                 </li>
                 <li class="address__item">
                     <a class="link" href="tel:+380961111111">
-                        <svg class="address__link--icon" width="20px" height="16px">
+                        <svg class="address__icon" width="20px" height="16px">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11
                     </a>
